I notice you've provided an error message rather than a git diff. To generate an accurate commit message, I need to see the actual code changes (the git diff output showing what files were modified and what specific changes were made).
Could you please provide the git diff output? It would typically look something like:

```
diff --git a/file.js b/file.js
index 1234567..abcdefg 100644
--- a/file.js
+++ b/file.js
@@ -10,3 +10,4 @@
 // actual code changes here
```

Once you provide the git diff, I'll be able to generate a proper commit message following your specified format.

--- a/ERP_AI_Assistant/dashboard.html
+++ b/ERP_AI_Assistant/dashboard.html
@@ -451,7 +451,7 @@
                     </ul>
                 </div>
                 <div class="module-actions">
-                    <a href="/" class="btn btn-secondary">
+                    <a href="marcin-chat.html" class="btn btn-secondary">
                         <i class="fas fa-comments"></i>
                         Rozpocznij Chat
                     </a>
@@ -553,7 +553,7 @@
         <div class="quick-actions">
             <h3>⚡ Szybkie Akcje</h3>
             <div class="quick-grid">
-                <a href="/" class="quick-btn">
+                <a href="marcin-chat.html" class="quick-btn">
                     <i class="fas fa-comments"></i>
                     Zadaj pytanie AI
                 </a>
